fixed the gap in the footer and minor styling to shop banner

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,19 +20,21 @@ html, body {
 .nav {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
-  gap: 2rem;
-  padding: 0.1rem;
+  align-items: center;
+  padding: 0.5rem 1rem;
   border: 2px solid black;
   width: 100vw;
   position: fixed;
   top: 0;
   background-color: rgb(63, 33, 33);
   color: white;
+  min-height: 60px;
+  z-index: 1000;
 }
 
 .site-title {
   font-size: 2rem;
+  white-space: nowrap;
 }
 
 .nav ul {
@@ -100,7 +102,7 @@ nav li.active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40%
+  width: 50%
 }
 
 .shop-banner > img {
@@ -323,16 +325,28 @@ nav li.active {
 /* Footer */
 
 .footer {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  gap: 0;
 }
 
 .footer-top-email {
   background-color: yellow;;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2vh;
+
 }
 
 .footer-top-email > p {
   color: red;
   text-align: center;
+}
+
+.footer-top-email > input {
+  width: 10vw;
 }
 
 
@@ -347,3 +361,4 @@ nav li.active {
   color: white;
   text-align: center;
 }
+
